...
    // MARK: UI
    func configureUI(){

        // Configuring dynamic table view cells height
        tableView.estimatedRowHeight = 40
        tableView.rowHeight = UITableViewAutomaticDimension
        tableView.accessibilityLabel = "SearchTable"
    }

    // MARK: Navigation
    @IBAction func unwindToSearchVC(segue:UIStoryboardSegue){

    }
...
